update lan cuoi part 1

--- a/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
+++ b/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
@@ -177,7 +177,7 @@
                             <span class="micon dw dw-analytics-21"></span><span class="mtext">Thống kê</span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#">Sách xem nhiều</a></li>
+                            <li><a href="/Admin/Sachxemnhieu">Sách xem nhiều</a></li>
                             <li><a href="#">Người dùng</a></li>
                             <li><a href="#">Thống kê chung</a></li>
                         </ul>
