--- a/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
@@ -89,8 +89,8 @@
                         }
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                        <a class="dropdown-item" href="#"><i class="dw dw-user1"></i>Thông tin</a>
-                        <a class="dropdown-item" href="#"><i class="dw dw-help"></i> Thay đổi mật khẩu</a>
+                        <a class="dropdown-item" href="/Admin/Taikhoan"><i class="dw dw-user1"></i>Thông tin</a>
+                        <a class="dropdown-item" href="/Admin/Taikhoan"><i class="dw dw-help"></i> Thay đổi mật khẩu</a>
                         <a class="dropdown-item" href="/home/logout"><i class="dw dw-logout"></i> Đăng xuất</a>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                             <span class="micon dw dw-analytics-21"></span><span class="mtext">Thống kê</span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#">Sách xem nhiều</a></li>
+                            <li><a href="/Admin/Sachxemnhieu">Sách xem nhiều</a></li>
                             <li><a href="#">Người dùng</a></li>
                             <li><a href="#">Thống kê chung</a></li>
                         </ul>
