--- a/WebThuvien/Views/Admin/Sach.cshtml
+++ b/WebThuvien/Views/Admin/Sach.cshtml
@@ -67,9 +67,9 @@
                                                 </td>
                                                 <td>
                                                     <div class="table-actions">
-                                                        <a href="/Admin/XemChiTietSach?MaSach=@item.MASACH" data-color="#265ed7"><i class="icon-copy dw dw-edit2"></i></a>
-                                                        <a href="~/Content/Images/Sach/@path" title="Ảnh mã sách" data-color="#265ed7"><i class="fa fa-eye"></i></a>
-                                                        <a href="/Admin/Xoasach?MaSach=@item.MASACH" data-color="#e95959"><i class="icon-copy dw dw-delete-3"></i></a>
+                                                        <a href="/Admin/XemChiTietSach?MaSach=@item.MASACH" title="Chỉnh sửa" data-color="#265ed7"><i class="icon-copy dw dw-edit2"></i></a>
+                                                        <a href="~/Content/Images/Sach/@path" title="Ảnh mã sách" data-color="#265ed7"><i class="icon-copy fa fa-cloud-download" aria-hidden="true"></i></a>
+                                                        <a href="/Admin/Xoasach?MaSach=@item.MASACH" title="Xóa sách" data-color="#e95959"><i class="icon-copy dw dw-delete-3"></i></a>
                                                     </div>
                                                 </td>
                                             </tr>
