update theo yêu cầu
- chỉnh lại trang đăng nhập, trước khi đăng nhập out hết tài khoản trong máy
- chỉnh lại tự động scroll trang xuống content

--- a/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
+++ b/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
@@ -239,7 +239,7 @@
                                                 </div>
                                             </div>
                                         </td>
-                                        <td><p title="Mã thẻ : @item.MATHENGUOIMUON">@item.NGUOIMUON</p></td>
+                                        <td><p title="Mã thẻ : @item.MATHENGUOIMUON">@item.NGUOIMUON <br /> Mã thẻ : @item.MATHENGUOIMUON</p></td>
                                         <td>@ngaymuon</td>
                                         @if (item.NGAYTRA == null && thoigianquahan < 0)
                                         {
