--- a/WebThuvien/Views/Lienhe/Index.cshtml
+++ b/WebThuvien/Views/Lienhe/Index.cshtml
@@ -15,14 +15,13 @@
                             <div class="flipcard">
                                 <div class="front">
                                     <div class="top-info">
-                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i> Office Address</span>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i> Địa chỉ thư viện</span>
                                     </div>
                                     <div class="bottom-info">
                                         <span class="top-arrow"></span>
                                         <ul>
-                                            <li>121 King Street, Melbourne </li>
-                                            <li>Victoria 3000 Australia</li>
-                                            <li>PO Box 16122</li>
+                                            <li>Thư viện ban cơ yếu chỉnh phủ</li>
+                                            <li>Địa chỉ: 23 Ngụy Như Kon Tum, Thanh Xuân, Hà Nội</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -30,27 +29,25 @@
                                     <div class="bottom-info orange-bg">
                                         <span class="bottom-arrow"></span>
                                         <ul>
-                                            <li>121 King Street, Melbourne </li>
-                                            <li>Victoria 3000 Australia</li>
-                                            <li>PO Box 16122</li>
+                                            <li>Thư viện ban cơ yếu chỉnh phủ</li>
+                                            <li>Địa chỉ: 23 Ngụy Như Kon Tum, Thanh Xuân, Hà Nội</li>
                                         </ul>
                                     </div>
                                     <div class="top-info dark-bg">
-                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i> Office Address</span>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i> Địa chỉ thư viện</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="flipcard">
                                 <div class="front">
                                     <div class="top-info">
-                                        <span><i class="fa fa-fax" aria-hidden="true"></i> Phone and Fax</span>
+                                        <span><i class="fa fa-fax" aria-hidden="true"></i> Điện thoại</span>
                                     </div>
                                     <div class="bottom-info">
                                         <span class="top-arrow"></span>
                                         <ul>
-                                            <li><a href="tel:+123-456-7890">Local: +123-456-7890</a></li>
-                                            <li><a href="tel:+123-456-7890">Local: +123-456-7890</a></li>
-                                            <li><a href="fax:(001)-254-7359">Fax: (001)-254-7359</a></li>
+                                            <li><a href="tel:+123-456-7890">Nội bộ : +123-456-7890</a></li>
+                                            <li>Điện thoại: (024) 3773 8668 | (024) 3222 2665</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -58,27 +55,25 @@
                                     <div class="bottom-info orange-bg">
                                         <span class="bottom-arrow"></span>
                                         <ul>
-                                            <li><a href="tel:+123-456-7890">Local: +123-456-7890</a></li>
-                                            <li><a href="tel:+123-456-7890">Local: +123-456-7890</a></li>
-                                            <li><a href="fax:(001)-254-7359">Fax: (001)-254-7359</a></li>
+                                            <li><a href="tel:+123-456-7890">Nội bộ : +123-456-7890</a></li>
+                                            <li>Điện thoại: (024) 3773 8668 | (024) 3222 2665</li>
                                         </ul>
                                     </div>
                                     <div class="top-info dark-bg">
-                                        <span><i class="fa fa-fax" aria-hidden="true"></i> Phone and Fax</span>
+                                        <span><i class="fa fa-fax" aria-hidden="true"></i> Điện thoại</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="flipcard">
                                 <div class="front">
                                     <div class="top-info">
-                                        <span><i class="fa fa-envelope" aria-hidden="true"></i> Email Address</span>
+                                        <span><i class="fa fa-envelope" aria-hidden="true"></i> Địa chỉ hòm thư </span>
                                     </div>
                                     <div class="bottom-info">
                                         <span class="top-arrow"></span>
                                         <ul>
-                                            <li>www.libraria.com</li>
-                                            <li>support@libraria.com</li>
-                                            <li>info@libraria.com</li>
+                                            <li>thuvienso.bancoyeu@edu.com</li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -86,13 +81,12 @@
                                     <div class="bottom-info orange-bg">
                                         <span class="bottom-arrow"></span>
                                         <ul>
-                                            <li><a href="http://www.libraria.com/">www.libraria.com </a></li>
-                                            <li><a href="mailto:support@libraria.com">support@libraria.com</a></li>
-                                            <li><a href="mailto:info@libraria.com">info@libraria.com</a></li>
+                                            <li>thuvienso.bancoyeu@edu.com</li>
+
                                         </ul>
                                     </div>
                                     <div class="top-info dark-bg">
-                                        <span><i class="fa fa-envelope" aria-hidden="true"></i> Email Address</span>
+                                        <span><i class="fa fa-envelope" aria-hidden="true"></i>Địa chỉ hòm thư</span>
                                     </div>
                                 </div>
                             </div>
